kubeflow-training-operator/upstream.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app: training-operator
  name: training-operator
  namespace: kubeflow
spec:
  ports:
  - name: monitoring-port
    port: 8080
    targetPort: 8080
  - name: webhook-server
    port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    control-plane: kubeflow-training-operator
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    control-plane: kubeflow-training-operator
  name: training-operator
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: kubeflow-training-operator
  template:
    metadata:
      labels:
        control-plane: kubeflow-training-operator
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - command:
        - /manager
        image: ghcr.io/kubeflow/training-v1/training-operator:v1-3f15cb8
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 3
        name: training-operator
        ports:
        - containerPort: 8080
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 3
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: training-operator
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: training-operator-webhook-cert
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    control-plane: kubeflow-training-operator
  name: validator.training-operator.kubeflow.org
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: training-operator
      namespace: kubeflow
      path: /validate-kubeflow-org-v1-jaxjob
  failurePolicy: Fail
  name: validator.jaxjob.training-operator.kubeflow.org
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - jaxjobs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: training-operator
      namespace: kubeflow
      path: /validate-kubeflow-org-v1-paddlejob
  failurePolicy: Fail
  name: validator.paddlejob.training-operator.kubeflow.org
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - paddlejobs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: training-operator
      namespace: kubeflow
      path: /validate-kubeflow-org-v1-pytorchjob
  failurePolicy: Fail
  name: validator.pytorchjob.training-operator.kubeflow.org
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pytorchjobs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: training-operator
      namespace: kubeflow
      path: /validate-kubeflow-org-v1-tfjob
  failurePolicy: Fail
  name: validator.tfjob.training-operator.kubeflow.org
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - tfjobs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: training-operator
      namespace: kubeflow
      path: /validate-kubeflow-org-v1-xgboostjob
  failurePolicy: Fail
  name: validator.xgboostjob.training-operator.kubeflow.org
  rules:
  - apiGroups:
    - kubeflow.org
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - xgboostjobs
  sideEffects: None
